libgphoto2_port 0.7.2

Build:
   * Put auto* files into auto-aux/ and auto-m4/.

------------------------------------------------------------------------

libgphoto2_port 0.7.1

Build:
   * Fix usb, disk and ptpip iolibs to not pick up old gphoto2 headers.

------------------------------------------------------------------------

libgphoto2_port 0.7.0

   * Added a few internal functions.